<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">QueComoHoy</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Usuario o contraseña incorrecta"</string>
    <string name="recipe_search_failed">"No se encontraron recetas"</string>
    <string name="no_favourites_yet">"Todavia no tenés favoritos.\nEncontrá las mejores recetas en el buscador o escaneá los ingredientes en tu cocina!</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="signup_title">Registrate</string>
    <string name="signup_name">Nombre</string>
    <string name="signup_mail">Mail</string>
    <string name="signup_password">Contraseña</string>
    <string name="signup_create_account">Crear cuenta</string>
    <string name="signup_lastname">Apellidos</string>
    <string name="action_fav">Favorite</string>
    <string name="preference_label">{label}</string>
    <string name="save">Guardar</string>
    <string name="write_an_ingredient">Escribe un ingrediente</string>
    <string name="recipe_name">Nombre de receta</string>
    <string name="ingredients">Ingredientes</string>
    <string name="steps">Pasos</string>
    <string name="write_recipe_name">Escribe una receta</string>
    <string name="by_author">Hecha por %1$s</string>
    <string name="selected_ingredients">Ingredientes seleccionados</string>
    <string name="recipes">Recetas</string>
    <string name="example_step">Lo que resta hacer es dar vuelta nuestro omelette una vez que ya esté bien cocido de un lado para que se cocine bien del otro y listo! Al terminar, lo retiramos con cuidado y lo servimos en un plato para degustarlo y ser felices.</string>
    <string name="username">Nombre de Usuario</string>
    <string name="lunch_channel">Almuerzo</string>
    <string name="lunch_channel_desc">Recomendaciones a la hora del almuerzo</string>
    <string name="dinner_channel">Cena</string>
    <string name="dinner_channel_desc">Recomendaciones a la hora de la cena</string>
    <string name="no_scan_results">No se encontraron recetas o ingredientes en esta imagen. Intenta de nuevo con otra!</string>
    <string name="scan_to_start">Escanea lo que tengas en tu cocina o busca una foto en tu galeria para buscar recetas</string>
    <string name="omnivore">Como de todo</string>
    <string name="vegetarian">Vegetariano</string>
    <string name="vegan">Vegano</string>
    <string name="pescetarian">Pescetariano</string>
    <string name="other">Otra</string>
    <string name="lunch_channel">Almuerzo</string>
    <string name="lunch_channel_desc">Recomendaciones a la hora del almuerzo</string>
    <string name="dinner_channel">Cena</string>
    <string name="dinner_channel_desc">Recomendaciones a la hora de la cena</string>
</resources>
