<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/registrationLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="ui.registration.RegistrationFragment">


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/nameLayout"
        style="@style/InputLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/name"
            style="@style/InputText"
            android:hint="@string/signup_name">

        </com.google.android.material.textfield.TextInputEditText>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/lastnamesLayout"
        style="@style/InputLayout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nameLayout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/lastnames"
            style="@style/InputText"
            android:hint="@string/signup_lastname">

        </com.google.android.material.textfield.TextInputEditText>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/emailLayout"
        style="@style/InputLayout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/userNameLayout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/email"
            style="@style/InputText"
            android:hint="@string/signup_mail"
            android:inputType="textEmailAddress"
            tools:ignore="TouchTargetSizeCheck">

        </com.google.android.material.textfield.TextInputEditText>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/userNameLayout"
        style="@style/InputLayout"
        app:layout_constraintWidth_percent="0.8"
        android:layout_marginTop="@dimen/fragment_vertical_margin"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lastnamesLayout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/userName"
            style="@style/InputText"
            android:hint="@string/username"
            android:inputType="textEmailAddress"
            tools:ignore="TouchTargetSizeCheck">

        </com.google.android.material.textfield.TextInputEditText>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/passwordLayout"
        style="@style/InputLayout"
        app:passwordToggleEnabled="true"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/emailLayout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/password"
            style="@style/InputText"
            android:inputType="textPassword"
            android:hint="@string/signup_password">

        </com.google.android.material.textfield.TextInputEditText>
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/create_account_button"
        style="?android:attr/borderlessButtonStyle"
        android:background="@drawable/button"
        android:textColor="@color/white"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/signup_create_account"
        android:textAllCaps="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passwordLayout"
        app:layout_constraintVertical_bias="0.7"
        app:layout_constraintWidth_percent="0.8" />

    <ProgressBar
        android:id="@+id/progress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        android:indeterminate="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">
    </ProgressBar>


</androidx.constraintlayout.widget.ConstraintLayout>