<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".ui.searchrecipes.SearchFragment">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/searchRecipeLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/fragment_vertical_margin"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:startIconDrawable="@drawable/ic_search"
        app:endIconMode="clear_text"
        app:layout_constraintWidth_percent="0.8"
        style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
        android:hint="@string/write_recipe_name">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/searchRecipeInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textFilter"
            android:minHeight="48dp"
            android:textColorHint="#616161">

        </com.google.android.material.textfield.TextInputEditText>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/tabLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/searchRecipeLayout">

        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/recipe_name" />

        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ingredients" />
    </com.google.android.material.tabs.TabLayout>

    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/viewPager"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/start_cooking_button"
        app:layout_constraintTop_toBottomOf="@+id/tabLayout" />

    <Button
        android:id="@+id/start_cooking_button"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:background="@drawable/button"
        android:text="¡Empezá a cocinar!"
        android:textAllCaps="false"
        android:textColor="#5D4037"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/viewPager"
        app:layout_constraintVertical_bias="0.7"
        app:layout_constraintWidth_percent="0.8"
        tools:visibility="visible" />

</androidx.constraintlayout.widget.ConstraintLayout>